test/integration/bad/closures/no_keyword2.stan
model {
    vector foo(vector x) {
        return x;
    }
}